# project3-csci338

./: .gitignore  Dockerfile  README.md  checkjs.sh  checkpy.sh  compose.yaml  curl.sh  pyproject.toml  server.py
ui/: film.html  film.jsx  index.html  main.jsx  package-lock.json  package.json
